[tool.poetry]
name = "stably-discordant-worker"
version = "0.1.0"
description = ""
authors = ["Dan Kleeman <dan.kleeman.git@pm.me>"]
readme = "README.md"
packages = [{include = "stably_discordant_worker"}]

[tool.poetry.dependencies]
python = "^3.10"
zmq = "^0.0.0"
tomli = "^2.0.1"
torch = "^1.13.0"
xformers = "^0.0.16"
diffusers = "^0.21.4"
accelerate = "^0.24.1"
transformers = "^4.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
