[tool.poetry]
name = "stably-discordant-worker"
version = "0.1.0"
description = ""
authors = ["Dan Kleeman <dan.kleeman.git@pm.me>"]
readme = "README.md"
packages = [{include = "stably_discordant_worker"}]

[tool.poetry.dependencies]
python = "^3.10"
zmq = "^0.0.0"
tomli = "^2.0.1"
torch = "^1.13.0"
xformers = "^0.0.16"
diffusers = "^0.21.4"
accelerate = "^0.24.1"
transformers = "^4.35.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^1.6.1"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
# Enable isort ('I')
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
